<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="24dp"
	android:background="@color/fondo">

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/user_type_title"
		android:textSize="24sp"
		android:textStyle="bold"
		android:textColor="@color/text_primary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="64dp" />

	<Button
		android:id="@+id/btnAlumno"
		android:layout_width="0dp"
		android:layout_height="64dp"
		android:text="@string/user_type_alumno"
		android:textSize="16sp"
		android:layout_marginTop="64dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvTitle" />

	<Button
		android:id="@+id/btnMaestro"
		android:layout_width="0dp"
		android:layout_height="64dp"
		android:text="@string/user_type_maestro"
		android:textSize="16sp"
		android:layout_marginTop="24dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/btnAlumno" />

	<Button
		android:id="@+id/btnAdmin"
		android:layout_width="0dp"
		android:layout_height="64dp"
		android:text="@string/user_type_admin"
		android:textSize="16sp"
		android:layout_marginTop="24dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/btnMaestro" />

</androidx.constraintlayout.widget.ConstraintLayout>

