<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="24dp"
	android:background="@color/fondo">


	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/selection_title"
		android:textSize="64sp"
		android:textStyle="bold|italic"
		android:textColor="@color/accent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="64dp" />

	<ImageView
		android:id="@+id/ivLogo"
		android:layout_width="172dp"
		android:layout_height="143dp"
		android:layout_marginTop="24dp"
		android:contentDescription="@string/app_name"
		android:scaleType="fitCenter"
		android:src="@drawable/inicio"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvTitle" />

	<TextView
		android:id="@+id/tvSubtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:textColor="@color/text_secondary"
		android:layout_marginTop="24dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/ivLogo" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/btnRegistered"
		android:layout_width="280dp"
		android:layout_height="41dp"
		android:layout_marginTop="12dp"
		android:background="@drawable/rounded_button_gray"
		android:text="@string/selection_registered"
		android:textColor="@color/black"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.493"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

	<TextView
		android:id="@+id/btnRegister"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/selection_register"
		android:textSize="16sp"
		android:textColor="@color/primary"
		android:textStyle="bold"
		android:clickable="true"
		android:focusable="true"
		android:padding="16dp"
		android:background="?android:attr/selectableItemBackground"
		android:layout_marginTop="24dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/btnRegistered" />

</androidx.constraintlayout.widget.ConstraintLayout>

