<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/fondo">

	<com.google.android.material.tabs.TabLayout
		android:id="@+id/tabLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.tabs.TabItem
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/admin_tab_alumnos" />

		<com.google.android.material.tabs.TabItem
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/admin_tab_maestros" />

		<com.google.android.material.tabs.TabItem
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Reinscripciones" />

	</com.google.android.material.tabs.TabLayout>

	<ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@id/btnLogout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tabLayout">

		<LinearLayout
			android:id="@+id/containerPending"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp" />

	</ScrollView>

	<Button
		android:id="@+id/btnLogout"
		android:layout_width="0dp"
		android:layout_height="64dp"
		android:text="@string/cerrar_sesion"
		android:layout_margin="16dp"
		android:background="@drawable/rounded_button_gray"
		android:textColor="@color/black"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

